--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,40 @@
-**/__pychache__/
-.env/
-renamer/__pycache__/__init__.cpython-39.pyc
-.gitignore
-renamer/__pycache__/main.cpython-39.pyc
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Development Folders
+.vscode/
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Local scripting
+*.ps1
